infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-conversation-web-socket
  labels:
    name: live-conversation-web-socket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: lc.local
    http:
      paths:
      - pathType: Prefix
        path: "/ws/?(.*)"
        backend:
          service:
            name: live-conversation-conversation-service-service
            port: 
              number: 8999
